<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">掌上家居</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_index_nav">导航页</string>
    <string name="title_activity_register">注册页</string>
    <string name="title_activity_index_main">设备控制导航</string>
    <string name="nav_txt_kt">空调控制</string>
    <string name="nav_txt_xf">新风控制</string>
    <string name="nav_txt_dn">地暖控制</string>
    <string name="nav_txt_rs">热水控制</string>
    <string name="nav_txt_zj">主机控制</string>
    <string name="nav_txt_zm">照明控制</string>
    <string name="nav_txt_cl">窗帘控制</string>
    <string name="nav_txt_hj">环境监测</string>
    <string name="CONTENT_ALTERDIALOG_ITEM_EDIT">编辑</string>
    <string name="CONTENT_ALTERDIALOG_ITEM_DELETE">删除</string>
    <string name="TITLE_ALERTDIALOG_POSITIVE">确定</string>
    <string name="CONTENT_ALERTDIALOG_MESSAGE_CONFIRM_DELETE">确定要删除该设备吗?</string>
    <string name="title_activity_ktdetails">空调详细</string>
    <string name="title_activity_register_dc">注册设备</string>
    <string name="title_activity_about_us">关于我们</string>
    <string name="title_activity_type_manager">设备类别管理</string>
    <string name="title_activity_edit_dc">编辑设备名称</string>
    <string name="title_activity_detail_kt">空调详细</string>
    <string name="title_activity_wifi_point_cfg">激活设备</string>
    <string name="title_activity_forget_pwd">ForgetPwdActivity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_phone_num">手机号</string>
    <string name="prompt_newpassword">请输入新密码</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_repeatpassword">请再次输入密码</string>
    <string name="prompt_security_question">密保问题</string>
    <string name="prompt_security_answer">密保答案</string>
    <string name="prompt_air_condition">我家空调</string>
    <string name="prompt_wifi_ssid">WIFI SSID</string>
    <string name="action_reset_pwd">重置密码</string>
    <string name="action_sign_in_short">登录</string>
    <string name="action_sign_up_short">注册</string>
    <string name="action_forgot_password">忘记密码</string>
    <string name="action_remenber_password">记住密码</string>
    <string name="action_activate_device">激活</string>
    <string name="login_progress_signing_in">登录中</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="MENU_EXIT">退出</string>
    <string name="MENU_ABOUT">关于</string>
    <string name="MENU_AREYOUSURE">确定退出吗</string>
    <string name="MENU_POSITIVE_CONTEXT">确定</string>
    <string name="MENU_NEGATIVE_CONTEXT">取消</string>
    <string name="MENU_COPYRIGHT_CONTEXT">版权所有©掌上家居  深圳邦德瑞科技有限公司</string>
    <string name="MENU_CLOSE_CONTEXT">关闭</string>
    <string name="MENU_ONEKEY_POWEROFF">一键关机</string>
    <string name="MENU_AREYOUSURE_POWEROFF">确定关闭所有空调吗?</string>
    <string name="MENU_ONEKEY_POWERON">一键开机</string>
    <string name="MENU_AREYOUSURE_POWERON">确定运行所有空调吗?</string>
    <string name="title_activity_welcome_disc">WelcomeDiscActivity</string>
    <!-- add in 2014-12-27 -->
    <string name="action_button_next">下一步</string>
    <string name="welcomeDisc_txt_one">欢迎发现温控器</string>
    <string name="welcomeDisc_txt_two">接通电源,长按模式键10秒，输入设置密码666，再次按模式键 ,点击下一步</string>
    <string name="wifi_cfg_txt_one">连接WIFI</string>
    <string name="wifi_cfg_txt_two">选择一个可用的WIFI,让设备接入网络</string>
    <string name="title_activity_wifi_point_commu">WifiPointCommuActivity</string>
    <string name="title_activity_wifi_point_result">WifiPointResultActivity</string>
    <string name="wifi_commu_txt_one">检查网络</string>
    <string name="wifi_commu_txt_two">连接wifi互联网温控器</string>
    <string name="wifi_result_txt_one">连接结果</string>
    <string name="wifi_list_name">可连接网络</string>
    <string name="wifi_list_empty">还没有网络哦</string>
    <string name="wifi_refresh_wifilist">点我刷新</string>
    <string name="title_activity_wifi_scan_list">WifiScanListActivity</string>

</resources>
